fix navbar on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,7 +9,6 @@ h1, h2 {
     font-family: 'Press Start 2P', cursive;
 }
 nav {
-    width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
